; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_sender.c_send_chunk_eos_callback.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/mruby/extr_sender.c_send_chunk_eos_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_14__ = type { %struct.TYPE_12__* }
%struct.TYPE_12__ = type { i32* }
%struct.TYPE_13__ = type { i64 }
%struct.st_h2o_mruby_callback_sender_t = type { i32, %struct.TYPE_15__, %struct.TYPE_11__ }
%struct.TYPE_15__ = type { i32 }
%struct.TYPE_11__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_14__*, i32, i32*, i32, i32*)* @send_chunk_eos_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @send_chunk_eos_callback(%struct.TYPE_14__* %0, i32 %1, i32* %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_14__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_13__*, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.st_h2o_mruby_callback_sender_t*, align 8
  store %struct.TYPE_14__* %0, %struct.TYPE_14__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %16 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %17 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_12__*, %struct.TYPE_12__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  store i32* %20, i32** %12, align 8
  %21 = load i32*, i32** %12, align 8
  %22 = load i32, i32* %10, align 4
  %23 = call i32 @mrb_ary_entry(i32 %22, i32 0)
  %24 = call %struct.TYPE_13__* @h2o_mruby_get_generator(i32* %21, i32 %23)
  store %struct.TYPE_13__* %24, %struct.TYPE_13__** %13, align 8
  %25 = load i32*, i32** %12, align 8
  %26 = load %struct.TYPE_13__*, %struct.TYPE_13__** %13, align 8
  %27 = call i32 @check_precond(i32* %25, %struct.TYPE_13__* %26)
  store i32 %27, i32* %14, align 4
  %28 = load i32, i32* %14, align 4
  %29 = call i32 @mrb_nil_p(i32 %28)
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %34, label %31

31:                                               ; preds = %5
  %32 = load i32*, i32** %11, align 8
  store i32 1, i32* %32, align 4
  %33 = load i32, i32* %14, align 4
  store i32 %33, i32* %6, align 4
  br label %62

34:                                               ; preds = %5
  %35 = load %struct.TYPE_13__*, %struct.TYPE_13__** %13, align 8
  %36 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = inttoptr i64 %37 to i8*
  %39 = bitcast i8* %38 to %struct.st_h2o_mruby_callback_sender_t*
  store %struct.st_h2o_mruby_callback_sender_t* %39, %struct.st_h2o_mruby_callback_sender_t** %15, align 8
  %40 = load %struct.st_h2o_mruby_callback_sender_t*, %struct.st_h2o_mruby_callback_sender_t** %15, align 8
  %41 = getelementptr inbounds %struct.st_h2o_mruby_callback_sender_t, %struct.st_h2o_mruby_callback_sender_t* %40, i32 0, i32 2
  %42 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %41, i32 0, i32 0
  %43 = load i32, i32* %42, align 4
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %58, label %45

45:                                               ; preds = %34
  %46 = load %struct.st_h2o_mruby_callback_sender_t*, %struct.st_h2o_mruby_callback_sender_t** %15, align 8
  %47 = getelementptr inbounds %struct.st_h2o_mruby_callback_sender_t, %struct.st_h2o_mruby_callback_sender_t* %46, i32 0, i32 1
  %48 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %58, label %51

51:                                               ; preds = %45
  %52 = load %struct.TYPE_13__*, %struct.TYPE_13__** %13, align 8
  %53 = load %struct.st_h2o_mruby_callback_sender_t*, %struct.st_h2o_mruby_callback_sender_t** %15, align 8
  %54 = getelementptr inbounds %struct.st_h2o_mruby_callback_sender_t, %struct.st_h2o_mruby_callback_sender_t* %53, i32 0, i32 1
  %55 = load %struct.st_h2o_mruby_callback_sender_t*, %struct.st_h2o_mruby_callback_sender_t** %15, align 8
  %56 = getelementptr inbounds %struct.st_h2o_mruby_callback_sender_t, %struct.st_h2o_mruby_callback_sender_t* %55, i32 0, i32 0
  %57 = call i32 @h2o_mruby_sender_do_send_buffer(%struct.TYPE_13__* %52, %struct.TYPE_15__* %54, i32* %56, i32 1)
  br label %58

58:                                               ; preds = %51, %45, %34
  %59 = load %struct.TYPE_13__*, %struct.TYPE_13__** %13, align 8
  %60 = call i32 @h2o_mruby_sender_close_body(%struct.TYPE_13__* %59)
  %61 = call i32 (...) @mrb_nil_value()
  store i32 %61, i32* %6, align 4
  br label %62

62:                                               ; preds = %58, %31
  %63 = load i32, i32* %6, align 4
  ret i32 %63
}

declare dso_local %struct.TYPE_13__* @h2o_mruby_get_generator(i32*, i32) #1

declare dso_local i32 @mrb_ary_entry(i32, i32) #1

declare dso_local i32 @check_precond(i32*, %struct.TYPE_13__*) #1

declare dso_local i32 @mrb_nil_p(i32) #1

declare dso_local i32 @h2o_mruby_sender_do_send_buffer(%struct.TYPE_13__*, %struct.TYPE_15__*, i32*, i32) #1

declare dso_local i32 @h2o_mruby_sender_close_body(%struct.TYPE_13__*) #1

declare dso_local i32 @mrb_nil_value(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
